# suishou

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: release.yml
.tmp/: diag_out.txt  diag_plugins.py
.tmp/py_desktop_tools_storage_smoke/: dict_store.db
assets/app_icon/: app_icon.icns
assets/qta_icons/: manifest.json
design-system/suishou/: MASTER.md
docs/: README.zh-CN.md  architecture-complexity-adjustment-plan.zh-CN.md  memory_audit_2026-05.md  plugin-development.zh-CN.md  project-design.zh-CN.md  pyqt-qml-newbie-guide.zh-CN.md  tool-plugin-macos-redesign-plan.md
docs/pyside6-qml-tutorial/: 04-signal-slot.zh-CN.md  06-mvvm-architecture.zh-CN.md  08-plugin-system-1.zh-CN.md  15-component-splitting.zh-CN.md  README.zh-CN.md
scripts/: smoke_compile.ps1  smoke_import.ps1  smoke_plugin_manifests.ps1  smoke_storage.ps1  smoke_tests.ps1
src/app/: app_bootstrap.py  app_context.py  app_runtime.py  hotkey_coordinator.py  launcher_runtime_coordinator.py  main.py  paths.py  plugin_surface_coordinator.py  qta_icon_provider.py  settings.py  tray_coordinator.py  version.py  webengine.py
src/app/commands/: context.py  (+7 more)
tests/: test_app_indexing.py  test_core_architecture.py  test_qta_icon_assets.py  test_session_manager.py
tests/platform_layer/: test_notifications.py  test_paths.py  test_permissions.py  test_tray_appearance.py  test_windowing.py
tools/: build_macos.sh  build_windows.ps1  gen_qta_icons.py  generate_app_icon.py  py_desktop_tools.spec  suishou.spec
tools/pyinstaller/: py_desktop_tools.spec
(+222 files in other folders)
